Refine goal creation: localize categories, allow custom input, and slim down submit button

--- a/index.html
+++ b/index.html
@@ -72,19 +72,22 @@
                         <input type="text" id="goal-title" placeholder="例: AI開発を極める" required>
                     </div>
                     <div class="input-group">
-                    <label for="goal-category">CATEGORY</label>
-                    <select id="goal-category">
-                        <option value="skill">SKILL</option>
-                        <option value="health">HEALTH</option>
-                        <option value="finance">FINANCE</option>
-                        <option value="mindset">MINDSET</option>
-                    </select>
-                </div>
-                <div class="input-group">
-                    <label for="goal-tasks">TASKS (1行に1タスク)</label>
-                    <textarea id="goal-tasks" placeholder="例：&#10;毎日30分勉強する&#10;週末にポートフォリオを作る" rows="4"></textarea>
-                </div>
-                <button type="submit" class="btn-submit">起動する</button>
+                        <label for="goal-category">カテゴリー</label>
+                        <input type="text" id="goal-category" list="category-options" placeholder="例：自己研鑽、健康、仕事">
+                        <datalist id="category-options">
+                            <option value="スキル・学習">
+                            <option value="健康・習慣">
+                            <option value="仕事・キャリア">
+                            <option value="マインドセット">
+                        </datalist>
+                    </div>
+                    <div class="input-group">
+                        <label for="goal-tasks">タスク (1行に1タスク)</label>
+                        <textarea id="goal-tasks" placeholder="例：&#10;毎日30分勉強する&#10;週末にポートフォリオを作る" rows="4"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn-submit">登録</button>
+                    </div>
                 </form>
             </div>
         </div>
