Workflow Test: Added [Sync Test] tag to verify automated push process.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section id="hero" class="hero-section">
                 <div class="hero-content">
                     <h2 id="dynamic-greeting">2026年の挑戦を始めましょう</h2>
-                    <p class="subtitle">目標をセットして、最高の1年に。</p>
+                    <p class="subtitle">【Sync Test】目標をセットして、最高の1年に。</p>
                 </div>
             </section>
 
