Feature: Category Management. Added custom UI to manage and delete categories within the goal modal.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section id="hero" class="hero-section">
                 <div class="hero-content">
                     <h2 id="dynamic-greeting">2026年の挑戦を始めましょう</h2>
-                    <p class="subtitle">【Sync Test】目標をセットして、最高の1年に。</p>
+                    <p class="subtitle">目標をセットして、最高の1年に。</p>
                 </div>
             </section>
 
@@ -160,6 +160,9 @@
                             <option value="仕事・キャリア">
                             <option value="マインドセット">
                         </datalist>
+                        <div id="category-manager-list" class="category-manager-list">
+                            <!-- Category chips with delete buttons will be injected here -->
+                        </div>
                     </div>
                     <div class="input-group">
                         <label for="goal-title">目標の名前</label>
