style: compact header UI by merging hero section into goals dashboard

--- a/index.html
+++ b/index.html
@@ -33,30 +33,21 @@
         </nav>
 
         <main>
-            <!-- Vision Hero Section -->
-            <section id="hero" class="hero-section">
-                <div class="hero-content">
-                    <h2 id="dynamic-greeting">2026年の挑戦を始めましょう</h2>
-                    <p class="subtitle">目標をセットして、最高の1年に。</p>
+            <!-- Content Header & Goals -->
+            <section id="dashboard" class="dashboard-section">
+                <div class="section-header">
+                    <div class="header-main">
+                        <h2 id="dynamic-greeting">2026年の挑戦を始めましょう</h2>
+                        <p class="subtitle">目標をセットして、最高の1年に。</p>
+                    </div>
+                </div>
+                <div id="goals-container" class="goals-grid">
+                    <!-- Goals will be injected here -->
+                    <div class="empty-state">
+                        <p>まだ目標がありません。＋ボタンから追加してください。</p>
+                    </div>
                 </div>
             </section>
-
-            <!-- Goals Dashboard -->
-            <section id="dashboard" class="dashboard-section">
-
-                <!-- Goals Dashboard -->
-                <section id="dashboard" class="dashboard-section">
-                    <div class="section-header">
-                        <h3>Your Goals</h3>
-                        <!-- Energy container moved to Mission Control -->
-                    </div>
-                    <div id="goals-container" class="goals-grid">
-                        <!-- Goals will be injected here -->
-                        <div class="empty-state">
-                            <p>まだ目標がありません。＋ボタンから追加してください。</p>
-                        </div>
-                    </div>
-                </section>
         </main>
 
         <!-- Modals -->
