style: move greeting and subtitle into sticky navigation bar for compact layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         <div class="fluid-bg" id="fluid-bg"></div>
 
         <nav class="glass-nav">
-            <div class="logo">Goal Horizon <span>2026</span></div>
+            <div class="nav-left">
+                <div class="logo">Goal Horizon <span>2026</span></div>
+                <div class="nav-divider"></div>
+                <div class="nav-message">
+                    <span id="dynamic-greeting">2026年の挑戦を始めましょう</span>
+                    <span class="subtitle">目標をセットして、最高の1年に。</span>
+                </div>
+            </div>
             <div class="nav-links">
                 <button id="add-goal-btn" class="btn-primary">新しい目標を追加</button>
             </div>
@@ -36,10 +43,6 @@
             <!-- Content Header & Goals -->
             <section id="dashboard" class="dashboard-section">
                 <div class="section-header">
-                    <div class="header-main">
-                        <h2 id="dynamic-greeting">2026年の挑戦を始めましょう</h2>
-                        <p class="subtitle">目標をセットして、最高の1年に。</p>
-                    </div>
                 </div>
                 <div id="goals-container" class="goals-grid">
                     <!-- Goals will be injected here -->
