--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- GSAP for Rich Animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <!-- Three.js for WebGL Background -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
     <!-- Canvas Confetti for Achievements -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
@@ -109,6 +111,7 @@
             </div>
         </div>
     </div>
+    <script src="background.js"></script>
     <script src="script.js"></script>
 </body>
 
