feat: update deadline presets and implement 'this year' logic

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                     <div class="input-group">
                         <label>期限</label>
                         <div class="deadline-presets">
-                            <button type="button" class="preset-btn" data-value="this-week">今週中</button>
-                            <button type="button" class="preset-btn" data-value="this-month">今月末</button>
+                            <button type="button" class="preset-btn" data-value="this-week">今週</button>
+                            <button type="button" class="preset-btn" data-value="this-month">今月</button>
+                            <button type="button" class="preset-btn" data-value="this-year">今年</button>
                             <button type="button" class="preset-btn active" data-value="none">未定</button>
                         </div>
                         <input type="date" id="goal-deadline" class="hidden-date">
