--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="nav-content">
                 <div class="brand">
                     <span class="logo-text">Goal Horizon 2026</span>
+                    <div class="logo-subtitle">
+                        <span id="dynamic-greeting">2026年の挑戦を始めましょう</span>
+                        <span class="subtitle-text">目標をセットして、最高の1年に。</span>
+                    </div>
                 </div>
 
-                <!-- Simple View Tabs -->
+                <!-- pill-style Tabs -->
                 <div class="view-tabs">
                     <button class="tab-btn active" onclick="switchTab('active')" id="tab-active">目標</button>
                     <button class="tab-btn" onclick="switchTab('completed')" id="tab-completed">達成</button>
                 </div>
 
                 <div class="nav-actions">
-                    <div class="nav-message">
-                        <span id="dynamic-greeting">2026年の挑戦を始めましょう</span>
-                        <span class="subtitle">目標をセットして、最高の1年に。</span>
-                    </div>
                     <button id="add-goal-btn" class="btn-primary">新しい目標を追加</button>
                 </div>
             </div>
