feat: implement goal editing, dashboard redesign, and UI refinements

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div id="modal-overlay" class="modal-overlay">
             <div class="modal-content glass">
                 <button class="close-modal">&times;</button>
-                <h3>目標の登録</h3>
+                <h3 id="modal-title">目標の登録</h3>
                 <form id="goal-form">
                     <div class="input-group focus-animation">
                         <label for="goal-category">カテゴリー</label>
@@ -167,7 +167,7 @@
                         <input type="date" id="goal-deadline" class="hidden-date">
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn-submit">登録</button>
+                        <button type="submit" id="btn-submit" class="btn-submit">登録</button>
                     </div>
                 </form>
             </div>
