--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                             <button type="button" class="preset-btn" data-value="this-week">今週</button>
                             <button type="button" class="preset-btn" data-value="this-month">今月</button>
                             <button type="button" class="preset-btn" data-value="this-year">今年</button>
+                            <button type="button" class="preset-btn" data-value="custom">指定</button>
                             <button type="button" class="preset-btn active" data-value="none">未定</button>
                         </div>
                         <input type="date" id="goal-deadline" class="hidden-date">
