--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
                 </div>
 
                 <div class="nav-actions">
+                    <div id="user-profile" class="user-profile" style="display: none;">
+                        <div class="user-info">
+                            <img id="user-avatar" src="" alt="" class="user-avatar">
+                            <span id="user-name" class="user-name"></span>
+                        </div>
+                        <button id="logout-btn" class="btn-icon" title="ログアウト">
+                            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                                <polyline points="16 17 21 12 16 7"></polyline>
+                                <line x1="21" y1="12" x2="9" y2="12"></line>
+                            </svg>
+                        </button>
+                    </div>
+                    <button id="login-btn" class="btn-google">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google"
+                            width="18" height="18">
+                        <span>ログイン</span>
+                    </button>
                     <button id="add-goal-btn" class="btn-primary">新しい目標を追加</button>
                 </div>
             </div>
@@ -184,7 +203,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
