--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
                             width="18" height="18">
                         <span>ログイン</span>
                     </button>
-                    <button id="add-goal-btn" class="btn-primary">新しい目標を追加</button>
+                    <button id="add-goal-btn" class="btn-primary">
+                        <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor"
+                            stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="plus-icon">
+                            <line x1="12" y1="5" x2="12" y2="19"></line>
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                        </svg>
+                        <span>新しい目標を追加</span>
+                    </button>
                 </div>
             </div>
         </nav>
