refactor: globalize agent team and fix UI spacing issues in goal-horizon-2026

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <div class="user-info">
                             <img id="user-avatar" src="" alt="" class="user-avatar">
                             <span id="user-name" class="user-name"></span>
+                            <span id="premium-badge" class="premium-badge" style="display: none;">PREMIUM</span>
                         </div>
                         <button id="logout-btn" class="btn-icon" title="ログアウト">
                             <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor"
