feat: implement PWA offline support, skeleton screens, and premium toast notifications

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goal Horizon 2026 | 進捗を、快感に。</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0f172a">
+    <link rel="apple-touch-icon" href="img/icon-192.png">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -211,6 +214,8 @@
             </div>
         </div>
     </div>
+    <!-- Toast Notifications -->
+    <div id="toast-container" class="toast-container"></div>
     <script type="module" src="script.js"></script>
 </body>
 
